# GameFramework-1

./: .gitignore  HowToGetEvent.txt  README.md  イベントの取得方法.txt
include/: Audio.h  FileIO.h  FilePath.h  Font.h  Game.h  Graphics.h  Input.h  Lock.h  Model.h  Pool.h  Scene.h  Texture.h
include/glfw/: .#GLFWInput.h  Camera2D.cpp  Camera2D.h  Camera3D.h  GLFWAudio.h  GLFWFileIO.h  GLFWGame.cpp  GLFWGame.h  GLFWGraphics.h  GLFWInput.h  GLFWScene.h  GLFWTexture.cpp  GLFWTexture.h  KeyboadHandler.h  MouseHandler.h  SpriteBatcher.cpp  SpriteBatcher.h  XfileModel.h
include/math/: Rectangle.h  Rectangle3.h  Vector2.cpp  Vector2.h  Vector3.h
include/syukatsu/: Camera2D.h  Camera3D.h  KeyboadHandler.h  LeapMotionHandler.h  MouseHandler.h  ScrollHandler.h  SpriteBatcher.h  SpriteBatcher3D.h  SyukatsuAudio.h  SyukatsuFileIO.h  SyukatsuFont.h  SyukatsuGame.h  SyukatsuGraphics.h  SyukatsuInput.h  SyukatsuScene.h  SyukatsuTexture.h  XfileModel.h  syukatsu.h
src/: CMakeLists.txt  Camera2D.cpp  Camera3D.cpp  GLFWGame.cpp  GLFWTexture.cpp  KeyboadHandler.cpp  MouseHandler.cpp  ScrollHandler.cpp  SpriteBatcher.cpp  SpriteBatcher3D.cpp  SyukatsuFont.cpp  SyukatsuGame.cpp  SyukatsuTexture.cpp  XfileModel.cpp
src/glfw/: KeyboadHandler.cpp
test/: Assets.cpp  Assets.h  CMakeCache.txt  CMakeLists.txt  Camera2DTestScene.cpp  Camera2DTestScene.h  Camera3DTestScene.cpp  Camera3DTestScene.h  ColorTest.h  GLFWGameTest.cpp  GameTest  Makefile  PoolTest.cpp  SimpleObjectFactory.cpp  SimpleObjectFactory.h  SpriteBatcherTestScene.cpp  SpriteBatcherTestScene.h  TestListsScene.cpp  TestListsScene.h  TestScene1.h  TestScene2.h  VectorTest.cpp  XfileModelTestScene.cpp  XfileModelTestScene.h  cmake_install.cmake
